kubernetes-manifests/traffic-generator.yaml
# Archivo: kubernetes-manifests/traffic-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: microservices-observability
  labels:
    app: traffic-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
    spec:
      containers:
      - name: traffic-generator
        image: agustingom99/traffic-generator:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "0.2"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        command: ["node", "index.js", "--url", "$(URL)", "--interval", "$(INTERVAL)", "--errors"]
